--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <title>Mother of a Warrior</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            body {
+                background-color: black;
+                color: whitesmoke;
+            }
+        </style>
     </head>
     <body>
-        <p>Welcome to my journey as a Mother of a Warrior</p>
+        <p>What follows is my journey as a Mother of a Warrior</p>
     </body>
 </html>
